# coderace

./: .claude-task.md  .gitignore  BUILD-REPORT.md  CHANGELOG.md  DONE.txt  LICENSE  README.md  action.yml  all-day-build-contract-benchmark-tasks-v2.md  all-day-build-contract-benchmark.md  all-day-build-contract-builtin-tasks.md  all-day-build-contract-ci-integration.md  all-day-build-contract-context-eval.md  all-day-build-contract-cost-tracking.md  all-day-build-contract-dashboard.md  all-day-build-contract-leaderboard.md  all-day-build-contract-model-selection.md  all-day-build-contract-race-mode.md  all-day-build-contract-review-mode.md  all-day-build-contract-v0.2.md  all-day-build-contract-v090-tasks.md  all-day-build-contract-v1.0-statistical.md  all-day-build-contract-v1.6.0-github-action-review.md  all-day-build-contract-verification-tests.md  demo-race.yaml  progress-log.md  pyproject.toml
benchmark-results/: fibonacci-2026-02-27.md  fibonacci-v2-2026-02-27.md  hard-tasks-2026-02-27.md  multi-task-2026-02-27.md
coderace/: __init__.py  benchmark.py  benchmark_report.py  benchmark_stats.py  cli.py  context_eval.py  context_eval_report.py  cost.py  dashboard.py  display.py  elo.py  export.py  git_ops.py  html_report.py  maintainer_rubric.py  publish.py  reporter.py  review.py  review_report.py  scorer.py  statistics.py  stats.py  store.py  task.py  types.py
examples/: add-type-hints.yaml  ci-race-on-pr.yml  context-eval-demo.sh  example-task.yaml  fix-edge-case.yaml  model-selection.yaml  write-tests.yaml
scripts/: ci-gate.sh  ci-review.sh  ci-run.sh  format-comment.py  format-review-comment.py
tasks/: markdown-table.yaml  (+1 more)
(+90 files in other folders)
